--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [workspace]
+resolver = "2"
 members = ["leptos-state", "examples/*", "tests/integration"]
 
 [workspace.dependencies]
-leptos = "0.7"
+leptos = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
@@ -26,26 +27,3 @@ fake = "2.9"
 rstest = "0.18"
 test-case = "3.1"
 insta = "1.34"
-
-[workspace.dev-dependencies]
-wasm-bindgen-test = "0.3"
-pretty_assertions = "1.4"
-proptest = "1.4"
-quickcheck = "1.0"
-tokio-test = "0.4"
-criterion = { version = "0.5", features = ["html_reports"] }
-divan = "0.1"
-mockall = "0.12"
-fake = "2.9"
-rstest = "0.18"
-test-case = "3.1"
-insta = "1.34"
-console_error_panic_hook = "0.1"
-
-# Leptos version compatibility features
-leptos-0-6 = []
-leptos-0-7 = []
-leptos-0-8 = []
-[patch.crates-io]
-leptos = { path = "/Users/peterhanssens/consulting/CloudShuttle/leptos/leptos-hydration-fix-package/scripts/../../leptos" }
-leptos_macro = { path = "/Users/peterhanssens/consulting/CloudShuttle/leptos/leptos-hydration-fix-package/scripts/../../leptos_macro" }
