--- a/examples/analytics-dashboard/Cargo.toml
+++ b/examples/analytics-dashboard/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-leptos = { version = "0.7", features = ["csr"] }
-serde = { version = "1.0", features = ["derive"] }
-uuid = { version = "1.0", features = ["v4", "js"] }
+leptos = { workspace = true, features = ["csr"] }
+serde = { workspace = true, features = ["derive"] }
+uuid = { workspace = true, features = ["v4", "js"] }
 chrono = { version = "0.4", features = ["serde"] }
-wasm-bindgen = "0.2"
-console_error_panic_hook = "0.1"
+wasm-bindgen = { workspace = true }
+console_error_panic_hook = { workspace = true }
 rand = "0.8"
 getrandom = { version = "0.2", features = ["js"] }
