--- a/examples/codegen/Cargo.toml
+++ b/examples/codegen/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 leptos = { workspace = true }
 leptos-state = { path = "../../leptos-state", features = ["codegen"] }
-console_error_panic_hook = "0.1"
+console_error_panic_hook = { workspace = true }
 wasm-bindgen = { workspace = true }
 
 [target.wasm32-unknown-unknown.dependencies]
