--- a/examples/todo-app/Cargo.toml
+++ b/examples/todo-app/Cargo.toml
@@ -7,18 +7,16 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-leptos = { version = "0.7", features = ["csr"] }
-serde = { version = "1.0", features = ["derive"] }
-uuid = { version = "1.0", features = ["v4", "js"] }
+leptos = { workspace = true, features = ["csr"] }
+serde = { workspace = true, features = ["derive"] }
+uuid = { workspace = true, features = ["v4", "js"] }
 chrono = { version = "0.4", features = ["serde"] }
-wasm-bindgen = "0.2"
-console_error_panic_hook = "0.1"
+wasm-bindgen = { workspace = true }
+console_error_panic_hook = { workspace = true }
 console_log = "1.0"
 log = "0.4"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
 
-[[bin]]
-name = "todo-app"
-path = "src/main.rs"
+# Removed binary target - using library only
