Fix test suite: resolve API export issues and fix codegen tests for v0.2.0 release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["leptos-state", "examples/*", "tests/integration"]
+members = ["leptos-state", "examples/*", "tests/rust/integration"]
 
 [workspace.dependencies]
 leptos = "0.8"
