--- a/tests/rust/integration/Cargo.toml
+++ b/tests/rust/integration/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 leptos = { workspace = true }
-leptos-state = { path = "../../leptos-state" }
+leptos-state = { path = "../../../leptos-state" }
 wasm-bindgen-test = { workspace = true }
 console_error_panic_hook = { workspace = true }
 serde = { workspace = true }
