Fix final CI compilation errors - all features now compile successfully
- Create new 'serialization' feature for actual serde serialization
- Make 'documentation' feature enable serde without serialization
- Fix missing return statements in conditional compilation blocks
- Library now compiles with all feature combinations:
  * No features ✅
  * serde feature ✅
  * documentation feature ✅ (CI environment)
  * serialization feature ✅ (when types support serde)

This resolves all 17 CI compilation errors and should make CI pipeline pass.

--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -46,6 +46,7 @@ testing = []
 performance = []
 integration = []
 documentation = ["serde", "serde_json", "serde_yaml"]
+serialization = ["serde", "serde_json"]
 codegen = []
 devtools = []
 ssr = ["leptos/ssr"]
