Fix documentation feature compilation by removing serde dependency conflicts
- Remove serde and serde_json from documentation feature in Cargo.toml
- Update YAML export to use serialization feature instead of serde_yaml
- Fix conflicting serde imports in utils/types.rs and async_store.rs
- Documentation feature now compiles successfully without serde conflicts

--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -45,8 +45,8 @@ visualization = ["serde", "serde_json"]
 testing = []
 performance = []
 integration = []
-documentation = ["serde", "serde_json", "serde_yaml"]
-serialization = ["serde", "serde_json"]
+documentation = []
+serialization = ["serde", "serde_json", "serde_yaml"]
 codegen = []
 devtools = []
 ssr = ["leptos/ssr"]
