feat: Add comprehensive architectural redesign documentation and WASM compatibility fix
- Add ARCHITECTURAL_REDESIGN.md with complete redesign plan
- Add IMPLEMENTATION_TIMELINE.md with week-by-week development plan
- Add TECHNICAL_SPECIFICATION.md with implementation details
- Add V0_2_TO_V1_0_MIGRATION.md with migration guide
- Update ROADMAP.md to reflect new architecture
- Update User Guide for current limitations and future plans
- Update main docs README with comprehensive navigation
- Fix WASM-only issue in Cargo.toml (make web-sys/js-sys optional)
- Set foundation for v1.0.0 architectural redesign

This commit establishes the complete planning foundation for the
architectural redesign from v0.2.x to v1.0.0, addressing the
fundamental type system issues and creating a path forward.

--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -16,10 +16,10 @@ serde_json = { workspace = true, optional = true }
 serde_yaml = { workspace = true, optional = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
-web-sys = { workspace = true }
-wasm-bindgen = { workspace = true }
+web-sys = { workspace = true, optional = true }
+wasm-bindgen = { workspace = true, optional = true }
 uuid = { workspace = true, optional = true }
-js-sys = { workspace = true }
+js-sys = { workspace = true, optional = true }
 futures = "0.3"
 
 [dev-dependencies]
@@ -40,16 +40,17 @@ console_error_panic_hook = { workspace = true }
 
 [features]
 default = []
-persist = ["serde", "serde_json"]
+persist = ["serde", "serde_json", "web-sys", "wasm-bindgen"]
 visualization = ["serde", "serde_json"]
 testing = []
 performance = []
 integration = []
-documentation = []
+documentation = ["serde", "serde_json"]
 serialization = ["serde", "serde_json", "serde_yaml"]
 codegen = []
-devtools = []
+devtools = ["web-sys", "wasm-bindgen"]
 ssr = ["leptos/ssr"]
+wasm = ["web-sys", "wasm-bindgen", "js-sys"]
 
 # Leptos version compatibility features
 leptos-0-6 = []
