feat: Release v1.0.0-alpha.1 - Major architectural redesign
🎉 Major Release - Architectural Redesign

This is a major architectural redesign of leptos-state, addressing fundamental issues in v0.2.x and introducing a trait-first approach with improved type safety and Leptos v0.8+ integration.

✨ New Features:
- Trait-first design with explicit trait bounds (Send + Sync, Default, PartialEq, Debug)
- Type-safe state machines with new StateMachine, StateMachineState, StateMachineEvent, and StateMachineContext traits
- Enhanced error handling with comprehensive error types
- WASM-first but native-compatible architecture
- New Machine<C, E, S> struct for type-safe state machine implementation
- Context system with Context<C> struct for shared state and configuration
- Builder pattern with type-safe MachineBuilder
- Store traits (StoreState and Store) for reactive state management
- Enhanced hooks: use_machine, use_store, use_machine_with_context, use_machine_builder
- New hook variants: use_parallel_machines, use_composed_machines, use_store_slice, use_store_batch
- Comprehensive examples migrated to v1.0.0 API

🔧 Technical Improvements:
- Fixed over 330 compilation errors from v0.2.x
- Explicit trait bounds for thread safety
- Proper generic constraints throughout the system
- Clone support for better ergonomics
- Reduced compilation time and better memory usage
- WASM optimization for improved bundle size and performance

📚 Documentation:
- Updated README with v1.0.0-alpha.1 API and features
- Created comprehensive CHANGELOG.md
- All examples updated to demonstrate v1.0.0 patterns
- Complete API reference for new traits and types

⚠️ Breaking Changes:
This release contains breaking changes from v0.2.x. See the migration guide for upgrade instructions.

🚀 What's Next:
This alpha release establishes the foundation for v1.0.0. Planned features for the stable release include persistence system, DevTools integration, visualization, code generation, testing framework, and mid

--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos-state"
-version = "0.2.2"
+version = "1.0.0-alpha.1"
 edition = "2021"
 authors = ["Cloud Shuttle <team@cloud-shuttle.com>"]
 description = "A powerful state management library for Leptos applications with state machines, persistence, and DevTools"
@@ -21,11 +21,11 @@ wasm-bindgen = { workspace = true, optional = true }
 uuid = { workspace = true, optional = true }
 js-sys = { workspace = true, optional = true }
 futures = "0.3"
+proptest = { workspace = true, optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
 pretty_assertions = { workspace = true }
-proptest = { workspace = true }
 quickcheck = { workspace = true }
 tokio-test = { workspace = true }
 async-std = { workspace = true }
@@ -40,17 +40,13 @@ console_error_panic_hook = { workspace = true }
 
 [features]
 default = []
-persist = ["serde", "serde_json", "web-sys", "wasm-bindgen"]
-visualization = ["serde", "serde_json"]
-testing = []
-performance = []
-integration = []
-documentation = ["serde", "serde_json"]
-serialization = ["serde", "serde_json", "serde_yaml"]
-codegen = []
-devtools = ["web-sys", "wasm-bindgen"]
-ssr = ["leptos/ssr"]
 wasm = ["web-sys", "wasm-bindgen", "js-sys"]
+persist = ["serde", "serde_json", "serde_yaml", "uuid"]
+visualization = ["serde", "serde_json"]
+codegen = ["serde", "serde_json"]
+testing = ["proptest"]
+devtools = ["serde", "serde_json", "web-sys", "wasm-bindgen", "uuid"]
+ssr = ["leptos/ssr"]
 
 # Leptos version compatibility features
 leptos-0-6 = []
