feat: bump version to 1.0.0-beta.1 - ready for beta release

--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos-state"
-version = "1.0.0-alpha.1"
+version = "1.0.0-beta.1"
 edition = "2021"
 authors = ["Cloud Shuttle <team@cloud-shuttle.com>"]
 description = "A powerful state management library for Leptos applications with state machines, persistence, and DevTools"
@@ -46,6 +46,7 @@ visualization = ["serde", "serde_json"]
 codegen = ["serde", "serde_json"]
 testing = ["proptest"]
 devtools = ["serde", "serde_json", "web-sys", "wasm-bindgen", "uuid"]
+migration = ["serde", "serde_json"]
 ssr = ["leptos/ssr"]
 
 # Leptos version compatibility features
