--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos-state"
-version = "1.0.0-beta.1"
+version = "1.0.0-rc.1"
 edition = "2021"
 authors = ["Cloud Shuttle <team@cloud-shuttle.com>"]
 description = "A powerful state management library for Leptos applications with state machines, persistence, and DevTools"
