--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos-state"
-version = "1.0.0-rc.1"
+version = "1.0.0-rc.2"
 edition = "2021"
 authors = ["Cloud Shuttle <team@cloud-shuttle.com>"]
 description = "A powerful state management library for Leptos applications with state machines, persistence, and DevTools"
@@ -48,6 +48,7 @@ testing = ["proptest"]
 devtools = ["serde", "serde_json", "web-sys", "wasm-bindgen", "uuid"]
 migration = ["serde", "serde_json"]
 ssr = ["leptos/ssr"]
+serialization = ["serde", "serde_json"]
 
 # Leptos version compatibility features
 leptos-0-6 = []
