feat: complete v1.0.0 modernization and documentation updates
- Update all documentation to September 2025 dates
- Update version numbers to v1.0.0 across all files
- Update to Rust 2024 edition and modern dependencies
- Fix Rust 2024 binding modifier compatibility issues
- Add comprehensive pre-commit hooks setup
- Update Makefile with pre-commit and code quality targets
- Add TDD serialization feature tests
- Clean up compilation warnings and improve code quality
- Update API documentation to reflect current v1.0.0 API
- Update roadmap and changelog for v1.0.0 release

This completes the modernization effort for v1.0.0 release.

--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "leptos-state"
-version = "1.0.0-rc.2"
-edition = "2021"
+version = "1.0.0"
+edition = "2024"
 authors = ["Cloud Shuttle <team@cloud-shuttle.com>"]
 description = "A powerful state management library for Leptos applications with state machines, persistence, and DevTools"
 repository = "https://github.com/cloud-shuttle/leptos-state"
@@ -48,9 +48,11 @@ testing = ["proptest"]
 devtools = ["serde", "serde_json", "web-sys", "wasm-bindgen", "uuid"]
 migration = ["serde", "serde_json"]
 ssr = ["leptos/ssr"]
-serialization = ["serde", "serde_json"]
+serialization = ["serde", "serde_json", "serde_yaml"]
+documentation = []
+integration = []
+performance = []
 
 # Leptos version compatibility features
-leptos-0-6 = []
-leptos-0-7 = []
 leptos-0-8 = []
+leptos-0-9 = []
