--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -18,9 +18,16 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 web-sys = { workspace = true }
 wasm-bindgen = { workspace = true }
-uuid = { workspace = true, optional = true }
+uuid = { version = "1.0", features = ["v4"] }
 js-sys = { workspace = true }
 futures = "0.3"
+async-trait = "0.1"
+base64 = "0.21"
+flate2 = "1.0"
+regex = "1.10"
+chrono = { version = "0.4", features = ["serde"] }
+tokio = { version = "1.0", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
 
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
