--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -28,6 +28,7 @@ regex = "1.10"
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
+rand = { workspace = true }
 
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
