🔧 COMPILATION FIXES - Major Progress on Trait Bounds
✅ Fixed async/await conflicts in integration adapters
✅ Corrected generic parameter counts (TransitionCache, SerializedMachine)
✅ Resolved conflicting trait implementations (Clone, Debug for enums/structs)
✅ Added missing PhantomData for unused type parameters
✅ Fixed trait bound issues (Debug, Default bounds on builders)

📊 Results: Systematic reduction of trait bound errors across the codebase
🏗️ Architecture: Improved type safety and generic parameter handling
🚀 Next: Continue systematic trait bound fixes (Debug, Default, Hash, Eq)

--- a/examples/counter/Cargo.toml
+++ b/examples/counter/Cargo.toml
@@ -8,6 +8,7 @@ leptos = { workspace = true, features = ["csr"] }
 leptos-state = { path = "../../leptos-state" }
 console_error_panic_hook = { workspace = true }
 wasm-bindgen = { workspace = true }
+getrandom = { workspace = true }
 
 [target.wasm32-unknown-unknown.dependencies]
 wasm-bindgen = { workspace = true }
