--- a/examples/todo-app/Cargo.toml
+++ b/examples/todo-app/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = { workspace = true }
 console_error_panic_hook = { workspace = true }
 console_log = "1.0"
 log = "0.4"
+getrandom = { workspace = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
