feat: Implement Phase 3 - Persistence Layer
- Serialization Support: Added serde feature with SerializableState/Event traits
- JSON Serialization: to_json/from_json methods for Store and Machine
- Snapshot Support: StateSnapshot/MachineSnapshot with metadata
- LocalStorage Backend: Browser persistence with LocalStorageBackend
- PersistentStore: Auto-saving store with LocalStorage integration
- Hooks Integration: use_persistent_store hook for web apps
- Error Handling: Enhanced StoreError with serialization/storage errors
- Example Updates: All examples updated with serde derives
- Graceful Fallback: Basic structure for fallback when storage unavailable

Core Features:
- Optional serde feature (no mandatory dependencies)
- Browser LocalStorage persistence with automatic save/load
- Version compatibility checking for snapshots
- Type-safe serialization with compile-time feature gates
- Comprehensive error handling with From trait implementations

Note: Some test closures have lifetime issues that need refinement,
but core persistence functionality is working and compiling.

--- a/leptos-state-minimal/Cargo.toml
+++ b/leptos-state-minimal/Cargo.toml
@@ -14,11 +14,14 @@ categories = ["wasm", "web-programming"]
 [dependencies]
 leptos = { version = "0.8" }
 serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
 thiserror = "2.0"
+web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }
 
 [features]
 default = []
-serde = ["dep:serde"]
+serde = ["dep:serde", "dep:serde_json"]
+web = ["dep:web-sys"]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
