--- a/leptos-state/Cargo.toml
+++ b/leptos-state/Cargo.toml
@@ -29,6 +29,7 @@ chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
 rand = { workspace = true }
+libc = "0.2"
 
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
